--- a/dial.css
+++ b/dial.css
@@ -33,4 +33,6 @@ p { text-align: center; color: white;}
 h1 {text-align: center; color: white;}
 button{text-align: center;}
 
-img {text-align: center;
+img { display: block; margin: 20px auto; }
+
+
